# cmake_tut

./: CMakeLists.txt  tutorial.cpp
MathFunctions/: CMakeLists.txt  mysqrt.cpp
